variables.Variables.scala.error
Compilation error:
Variables:2: error: not found: type int
var cpt : int = 0
          ^